# PrimeEngine

./: Build.lua  CMakeLists.txt  LICENSE  README.md  main.cpp
PrimeEngine-Core/: Build-Core.lua
PrimeEngine-Core/Source/: PrimeEngine.cpp  PrimeEngine.h  Window.cpp  Window.h
PrimeEngine-Core/Source/Components/: ECS.h  Sprite.h  Transform.h
PrimeEngine-Core/Source/Components/Player/: Player.cpp  Player.h
PrimeEngine-Core/Source/Events/: Event.h  EventDispatcher.h  KeyEvents.h  MouseEvents.h
PrimeEngine-Core/Source/Helpers/: Log.h
PrimeEngine-Core/Source/Managers/: SpriteManager.cpp  SpriteManager.h  UILabel.cpp  UILabel.h
PrimeEngine-Core/Source/Math/: Clamp.h  Prandom.h  Vector2.cpp  Vector2.h
PrimeEngine-Game/: Build-App.lua
PrimeEngine-Game/Source/: GameManager.cpp  GameManager.h  PlayerAnimations.h  main.cpp
PrimeEngine-Game/Source/Coins/: Coin.cpp  Coin.h  CoinsController.cpp  CoinsController.h
PrimeEngine-Game/Source/Map/: Map.cpp  Map.h  Tile.h  TileGenerator.h
PrimeEngine-Game/Source/Player/: Player.cpp  Player.h  PlayerAnimations.h  PlayerController.cpp  PlayerController.h
Source/Game/: GameManager.cpp  GameManager.h
Source/PrimeEngine/: PrimeEngine.cpp  PrimeEngine.h  SpriteManager.cpp  SpriteManager.h  Window.cpp  Window.h
Source/PrimeEngine/Components/: Components.h  ECS.h  Sprite.h
Source/PrimeEngine/Components/Player/: Player.cpp  Player.h
Source/PrimeEngine/Core/: PrimeEngine.cpp  PrimeEngine.h
Source/PrimeEngine/Events/: EventHandler.cpp  EventHandler.h  KeyEvents.h  WindowEvents.h
Source/PrimeEngine/Managers/: SpriteManager.cpp
Source/PrimeEngine/Math/: Vector2.cpp
